--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "axios": "^1.2.2",
+    "bootstrap": "^5.2.3",
     "flag-icons": "^6.6.6",
     "sass": "^1.57.1",
     "vue": "^3.2.45"
